[package]
name = "json-view"
description = "json-view."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/json-view"
documentation = "https://docs.rs/json-view"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "jv"

[dependencies]
structopt = "0.2.14"
serde_json = "1.0.38"
termcolor = "1.0.4"
atty = "0.2.11"

[dependencies.log]
version = "0.4.6"
features = ["std"]
